--- a/ToDoApp/ToDoApp/Dockerfile
+++ b/ToDoApp/ToDoApp/Dockerfile
@@ -7,7 +7,7 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/core/sdk:3.1-buster AS build
 WORKDIR /src
-COPY ["ToDoApp/ToDoApp/ToDoApp.csproj", "ToDoApp/"]
+COPY ["ToDoApp/ToDoApp.csproj", "ToDoApp/"]
 RUN dotnet restore "ToDoApp/ToDoApp/ToDoApp.csproj"
 COPY . .
 WORKDIR "/src/ToDoApp"
