--- a/ToDoApp/ToDoApp/Dockerfile
+++ b/ToDoApp/ToDoApp/Dockerfile
@@ -8,6 +8,8 @@ EXPOSE 443
 FROM mcr.microsoft.com/dotnet/core/sdk:3.1-buster AS build
 WORKDIR /src
 COPY ["ToDoApp.csproj", "ToDoApp/"]
+RUN dir 
+RUN dir /ToDoApp
 RUN dotnet restore "ToDoApp/ToDoApp.csproj"
 COPY . .
 WORKDIR "/src/ToDoApp"
