--- a/ToDoApp/ToDoApp/Dockerfile
+++ b/ToDoApp/ToDoApp/Dockerfile
@@ -8,10 +8,12 @@ EXPOSE 443
 FROM mcr.microsoft.com/dotnet/core/sdk:3.1-buster AS build
 WORKDIR /src
 COPY ["ToDoApp.csproj", "ToDoApp/"]
-RUN dir 
-RUN dir /ToDoApp
-RUN dotnet restore "ToDoApp/ToDoApp.csproj"
+WORKDIR /src/ToDoApp
+RUN dir
+RUN dotnet restore "./ToDoApp.csproj"
+RUN dir
 COPY . .
+RUN dir
 WORKDIR "/src/ToDoApp"
 RUN dir
 RUN dotnet build "ToDoApp.csproj" -c Release -o /app/build
