--- a/ToDoApp/ToDoApp/Dockerfile
+++ b/ToDoApp/ToDoApp/Dockerfile
@@ -1,17 +1,17 @@
-#See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
-FROM mcr.microsoft.com/dotnet/core/aspnet:3.1-buster-slim AS base
-WORKDIR /app
-EXPOSE 80
-EXPOSE 443
-
 FROM mcr.microsoft.com/dotnet/core/sdk:3.1-buster AS build
 WORKDIR /src
 COPY ["ToDoApp.csproj", "ToDoApp/"]
+RUN dir 
+RUN dir /ToDoApp
 RUN dotnet restore "ToDoApp/ToDoApp.csproj"
+WORKDIR /src/ToDoApp
+RUN dir
+RUN dotnet restore "./ToDoApp.csproj"
+RUN dir
 COPY . .
+RUN dir
 WORKDIR "/src/ToDoApp"
-
+RUN dir
 RUN dotnet build "ToDoApp.csproj" -c Release -o /app/build
 
 FROM build AS publish
